# JetBot

./: README.md
detection_msgs/msg/: TargetCenter.msg
detector/: CMakeLists.txt  package.xml
detector/launch/: detect.launch  hector_detect.launch  jetbot_detect.launch  jetbot_detect_gazebo.launch  jetbot_real_detect.launch
detector/scripts/: gqsMainDetect  hector_detect.py  jetbotMainDetect.py  jetbot_detect.py  jetbot_real_detect.py  pub_image  pub_image.py  record_camera.py
detector/src/detector/: detect.py
jetbot_ros/: CMakeLists.txt
jetbot_ros/launch/: jetbot_bringup.launch
jetbot_ros/scripts/: jetbot_motors.py  jetbot_vel_control.py  linear_vel.py  teleop_key.py
robot_drone_bringup/: CMakeLists.txt  package.xml
robot_drone_bringup/launch/: ingress_egress.launch  mapping.launch  not_using.launch  spawn_spot.launch  spawn_world.launch  spot_gazebo.launch  spot_navigate.launch
robot_drone_bringup/launch/hector/: amcl.launch  move_base.launch  spawn_hector.launch  spawn_quadrotor.launch
robot_drone_bringup/launch/include/: amcl.launch  move_base.launch
robot_drone_bringup/launch/jetbot_gazebo/: amcl.launch  move_base.launch  spawn_jetbot.launch
robot_drone_bringup/maps/: blank_map.yaml
robot_drone_bringup/rviz/: hector.rviz  jetbot_navigation_move_base.rviz  jetbot_navigation_move_base_gazebo.rviz  spot_navigate.rviz
robot_drone_bringup/scripts/: ingress_egress.py  jetbot_control_simple.py  jetbot_speed.py  tf2_listener.py
robot_drone_bringup/worlds/: three_level_house.world  two_level_house.world
(+22 files in other folders)
